k8s/k8s-basic/common/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
          # - path: /ws
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: chat-api
          #       port:
          #         number: 5666
