k8s/k8s-basic/common/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress-custom 
  namespace: rabbitmq
  annotations:
    # This annotation ensures that the /rabbitmq prefix is removed before forwarding to the pod
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # This tells Nginx to preserve the original URL for redirect purposes
    #nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /rabbitmq(/|$)(.*)
        pathType: ImplementationSpecific 
        backend:
          service:
            name: realchat-rabbitmq
            port:
              number: 15672
      # - path: /argocd2(/|$)(.*)
      #   pathType: ImplementationSpecific
      #   backend:
      #     service:
      #       name: realchat-argo-cd-argocd-server
      #       port:
      #         number: 443
